# Rany_OS

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  KERNEL_REVIEW.md  Makefile  README.md  Rustカーネル設計案作成.md  build_result.txt  limine.conf  linker.ld  run.ps1  run.sh  rust-toolchain.toml  x86_64-exorust.json  x86_64-rany_os.json
.cargo/: config.toml
.github/instructions/: contex7.instructions.md
.github/workflows/: ci.yml  qemu-tests.yml
assets/firmware/ovmf-x64/: OVMF_CODE.fd
docs/: API_REFERENCE.md  ARCHITECTURE.md
scripts/: qemu-run.ps1  qemu-run.sh  run-tests.ps1  run.ps1  run.sh
src/: allocator.rs  domain_system.rs  error.rs  interrupts.rs  ipc.rs  lib.rs  main.rs  memory.rs  panic_handler.rs  smp.rs  smp_advanced.rs  spectre.rs  unwind.rs  vga.rs
src/application/: editor.rs  mod.rs  system_monitor.rs  terminal.rs
src/application/browser/: browser.rs  css.rs  dom.rs  html.rs  layout.rs  mod.rs  render.rs  style.rs
src/application/browser/script/: ast.rs  dom_binding.rs  lexer.rs  mod.rs  parser.rs  runtime.rs  value.rs  vm.rs
src/application/editor/: buffer.rs  constants.rs  cursor.rs  editor_core.rs  font.rs  mod.rs  rope.rs  syntax.rs  types.rs
src/application/games/: breakout.rs  minesweeper.rs  mod.rs  solitaire.rs
src/application/games/breakout/: game.rs  input.rs  logic.rs  mod.rs  render.rs  types.rs
src/application/games/solitaire/: drawing.rs  game.rs  input.rs  logic.rs  mod.rs  render.rs  types.rs
src/application/terminal/: ansi.rs  app.rs  buffer.rs  cell.rs  completer.rs  constants.rs  font.rs  history.rs  keys.rs  mod.rs  selection.rs  terminal.rs
src/benchmark/: mod.rs
src/console/: mod.rs
src/demo/: echo_server.rs  http_server.rs  mod.rs  performance_demo.rs
src/diag/: mod.rs
src/domain/: lifecycle.rs  mod.rs  registry.rs
src/fs/: async_ops.rs  block.rs  cache.rs  devfs.rs  ext2.rs  fat32.rs  fs_abstraction.rs  memfs.rs  mod.rs  procfs.rs  vfs.rs
src/gpu/: mod.rs
src/graphics/: boot_splash.rs  bsod.rs  compositor.rs  console.rs  font.rs  framebuffer.rs  global.rs  image.rs  mod.rs  qrcode.rs  types.rs  window.rs
src/graphics/compositor/: compositor.rs  constants.rs  cursor.rs  dirty_rect.rs  mod.rs  types.rs  window.rs
src/input/: mod.rs
src/integration/: device_manager.rs  interrupt_routing.rs  mod.rs  security_integration.rs
src/interrupts/: exceptions.rs  gdt.rs  mod.rs
src/io/: acpi.rs  ahci.rs  ahci_atapi.rs  apic.rs  dma.rs  dma_cache.rs  ide.rs  interrupt_manager.rs  io_scheduler.rs  iommu.rs  keyboard.rs  log.rs  mod.rs  msi.rs  nvme.rs  nvme_polling.rs  pci.rs  pci_old.rs  pcie.rs  polling.rs  ps2.rs  rtc.rs  serial.rs  virtio.rs  virtio_blk.rs  virtio_net.rs
src/io/acpi/: info.rs  mod.rs  parser.rs  tables.rs
src/io/ahci/: command.rs  controller.rs  dma_buffer.rs  fis.rs  identify.rs  mod.rs  poll_handler.rs  port.rs  types.rs
src/io/audio/: hda.rs  mixer.rs  mod.rs  regs.rs
src/io/hid/: keyboard.rs  keymap.rs  mod.rs  mouse.rs
src/io/nvme/: async_io.rs  commands.rs  controller.rs  defs.rs  driver.rs  error.rs  global.rs  identify.rs  mod.rs  per_core.rs  polling_driver.rs  queue.rs  queue_types.rs  regs.rs  scheduler.rs
src/io/pci/: bus.rs  ecam.rs  legacy.rs  mod.rs  msi.rs  pcie_ext.rs  traits.rs  types.rs
src/io/usb/: descriptor.rs  device.rs  mod.rs  xhci.rs
src/io/virtio/: blk.rs  core.rs  defs.rs  mod.rs  net.rs  net_async.rs  transport.rs
src/ipc/: mod.rs  pipe.rs  proxy.rs  rref.rs  shared_mem.rs
src/kapi/: mod.rs
src/loader/: ed25519.rs  elf.rs  mod.rs  sha256.rs  signature.rs
src/mm/: buddy_allocator.rs  exchange_heap.rs  frame_allocator.rs  higher_half.rs  mapping.rs  mmap.rs  mod.rs  per_cpu.rs  slab_cache.rs
src/monitor/: collectors.rs  display.rs  mod.rs
src/net/: adaptive_polling.rs  arp.rs  dhcp.rs  dns.rs  driver_bridge.rs  endpoint.rs  ethernet.rs  icmp.rs  ipv4.rs  mempool.rs  mod.rs  optimization.rs  socket.rs  stack.rs  tcp.rs  tls.rs  udp.rs  zero_copy.rs
src/net/endpoint/: congestion.rs  event.rs  flow_control.rs  futures.rs  handler.rs  inner.rs  manager.rs  retransmit.rs  segment.rs  socket.rs  tcb.rs  tcp_rx.rs  tests.rs  types.rs  window_scale.rs
src/pcie/: mod.rs
src/power/: mod.rs
src/profiler/: mod.rs
src/sas/: heap_registry.rs  memory_region.rs  mod.rs  ownership.rs
src/security/: audit.rs  capability.rs  mac.rs  mod.rs  policy.rs  static_capability.rs
src/shell/: async_shell.rs  exoshell.rs  graphical.rs  mod.rs
src/shell/exoshell/: display.rs  mod.rs  shell.rs  types.rs
src/shell/graphical/: async_runtime.rs  input.rs  mod.rs  render.rs  shell.rs  types.rs
src/smp/: bootstrap.rs  mod.rs
src/sync/: irq_mutex.rs  lockfree.rs  mod.rs
src/syscall/: mod.rs
src/task/: context.rs  environ.rs  executor.rs  interrupt_waker.rs  mod.rs  per_core_executor.rs  preemption.rs  process.rs  scheduler.rs  signal.rs  timer.rs  waker.rs  work_stealing.rs  work_stealing_advanced.rs
src/test/: benchmark.rs  integration.rs  ipc_tests.rs  memory_tests.rs  mod.rs  network_tests.rs  task_tests.rs
src/thermal/: mod.rs
src/time/: mod.rs
src/unwind/: gimli_unwinder.rs  mod.rs  reader.rs  registers.rs
src/usb/: mod.rs
src/userspace/: mod.rs
src/watchdog/: mod.rs
tests/: integration_test.rs
(+64 files in other folders)
