[package]
name = "exorust_kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "exorust_kernel"
path = "src/main.rs"

[dependencies]
# ブートローダー（物理メモリマッピング機能付き）
bootloader = "0.9"

# x86_64アーキテクチャサポート
x86_64 = "0.14"

# スピンロック（no_std互換）
spin = "0.9"

# メモリアロケータ
linked_list_allocator = "0.10"

# Lazy static for global state
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# PIC (Programmable Interrupt Controller)
pic8259 = "0.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3