[package]
name = "rany_os"
version = "0.3.0"
edition = "2024"
authors = ["ExoRust Team"]
description = "Single Address Space, Async-First Rust OS Kernel - Pure Performance Architecture"

[[bin]]
name = "exorust_kernel"
path = "src/main.rs"

[lib]
name = "rany_os"
path = "src/lib.rs"

# ============================================================================
# 依存関係
# ============================================================================
# 設計理念:
# - linked_list_allocator を削除: O(n)探索は性能目標と矛盾
#   → 自作Buddy Allocator (src/mm/buddy_allocator.rs) を使用
# - pic8259 を削除: レガシーPICはAPIC/MSI-X専用設計と矛盾
#   → PIC無効化処理は直接I/Oポート操作で実装
# ============================================================================

[dependencies]
# ブートローダー（物理メモリマッピング機能付き）
bootloader = { version = "0.9", features = ["map_physical_memory"] }

# x86_64アーキテクチャサポート
x86_64 = "0.14"

# スピンロック（no_std互換）
spin = "0.9"

# Lazy static for global state
lazy_static = { version = "1.5", features = ["spin_no_std"] }

# UART シリアル出力（デバッグ用）
uart_16550 = { version = "0.3", optional = true }

# ビットフィールド操作
bitflags = "2.4"

# ============================================================================
# ビルドプロファイル
# ============================================================================

[profile.dev]
panic = "abort"
# デバッグシンボルを保持
opt-level = 0
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = 3
# リリースビルドでもデバッグシンボルを保持
debug = true

[profile.test]
panic = "abort"
opt-level = 1

# ============================================================================
# フィーチャーフラグ
# ============================================================================

[features]
default = []
# 詳細ログ出力
verbose_logging = []
# 署名検証を必須化
require_signatures = []
# シリアル出力を有効化
serial = ["uart_16550"]
# 統計情報収集
stats = []

# ============================================================================
# ブートイメージ設定
# ============================================================================

[package.metadata.bootimage]
build-command = ["build"]
run-command = [
    "qemu-system-x86_64",
    "-drive", "format=raw,file={}",
    "-serial", "stdio",
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-display", "none"
]

test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300